Issue #SB-21907 fix: [Portal]- Close button is not aligned properly in view all batch page in workspace.

--- a/src/app/client/src/assets/styles/themes.scss
+++ b/src/app/client/src/assets/styles/themes.scss
@@ -1130,6 +1130,11 @@ html[layout='joy'] {
       }
     }
   }
+
+  .batchlist-header {
+    margin-bottom: calculateRem(16px);
+  }
+
 }
 
 .data-labels{
